Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -506,7 +506,9 @@ a.inline { color: inherit; text-decoration: underline; }
         <li>Website: <a class="inline" href="https://simvolistika.com/" target="_blank" rel="noopener">simvolistika.com</a> — Online store for oracle/mystical card decks and related products.</li>
         <li>Website: <a class="inline" href="https://stivski.shop/" target="_blank" rel="noopener">stivski.shop</a> — Fashion e-commerce site selling trendy oversize sweatshirts and apparel.</li>
         <li>Website: <a class="inline" href="https://thebigfunnel.marketing/" target="_blank" rel="noopener">thebigfunnel.marketing</a> — Marketing agency website offering business growth, strategy, and digital marketing services.</li>
+        <li>Website: <a class="inline" href="https://drakarious.store/" target="_blank" rel="noopener">drakarious.store</a> — Marketing agency website offering business growth, strategy, and digital marketing services.</li>
       </ul>
+             
             </div>
 
             <div class="project">
@@ -671,6 +673,7 @@ a.inline { color: inherit; text-decoration: underline; }
             <span class="badge">Apache</span>
             <span class="badge">Nginx</span>
             <span class="badge">Excel</span>
+            <span class="badge">WordPress</span>
           </div>
         </div>
 
@@ -778,6 +781,7 @@ backToTop.addEventListener('click', () => {
   </script>
 </body>
 </html>
+
 
 
 
